testing security configurations

--- a/BlogPostsManagementSystem.csproj
+++ b/BlogPostsManagementSystem.csproj
@@ -6,8 +6,11 @@
 
   <ItemGroup>
     <PackageReference Include="HotChocolate.AspNetCore" Version="12.4.0-rc.1" />
+    <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="12.4.0-rc.1" />
     <PackageReference Include="HotChocolate.AspNetCore.Playground" Version="10.5.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.12" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
