[ADD] More entities and PostgreSQL Support

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -11,6 +11,14 @@
     "Issuer": "Apollo"
   },
   "Property": {
-    "DBConnection": "Server=.;User Id=sa;password=<YourStrong@Passw0rd>;Database=BlogsManagement"
+    "SQLServerConnection": "Server=.;User Id=sa;password=<YourStrong@Passw0rd>;Database=BlogsManagement",
+    "Database": "PostgreSQL"
+  },
+  "PostgreSQL": {
+    "Host": "127.0.0.1",
+    "Port": 5432,
+    "User": "postgres",
+    "Password": "",
+    "Database": "BlogsManagement"
   }
 }
